# wasi-experimental-toolkit

crates/ce/: Cargo.toml
crates/ce/src/: lib.rs
tests/: bindings.py  host-server.py  host_py.py
tests/ce-serialize/: Cargo.toml
tests/ce-serialize/src/: main.rs
wit/ephemeral/: wasi-ce.wit
